# pond

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: duckdb_level2_factor.py
notebook/: 20100104_rqh.csv  baostock.ipynb  clickhouse_demo.ipynb
pond/: __init__.py  enums.py  stock.py
pond/akshare/: __init__.py  const.py
pond/akshare/bond/: __init__.py  all_basic.py  cov_value_analysis.py  history.py  redeem.py
pond/akshare/stock/: __init__.py  all_basic.py  analyst_rating.py  history.py  index.py  index_concept.py  index_decorator.py  index_industry.py  industry.py  migrate_func.py
pond/binance_history/: __init__.py  api.py  async_api.py  config.py  const.py  download_manager.py  exceptions.py  futures_api.py  type.py  utils.py  vision.py  websocket_client.py
pond/chain_base/: __init__.py  client.py  holders.py
pond/clickhouse/: __init__.py  downoader.py  factor.py  helper.py  holders.py  kline.py  manager.py  prediction.py  spot_helper.py  stock_helper.py  strategy_stats.py
pond/clickhouse/data_proxy/: __init__.py  akshare.py  baostock.py  tdx.py
pond/clickhouse/scripts/: load_akshare_fund_net_value_to_db.py  load_akshare_fund_to_db.py  load_tdx_bond_to_db.py  load_tdx_to_db.py
pond/coin_gecko/: coin_info.py  contract_info.py  id_mapper.py
pond/duckdb/: __init__.py  type.py
pond/duckdb/bond/: __init__.py  kline.py
pond/duckdb/crypto/: UMFutures_manual.csv  __init__.py  const.py  custom_types.py  future.py  path.py
pond/duckdb/crypto/scripts/: .gitignore  download_kline.py  download_metric.py  etl_to_postgresql.py  export_marketcap_csv.py  fetch_marketcap.py
pond/duckdb/stock/: __init__.py  kline.py  level2.py  trades.py
pond/okex/: okex_kline_download.py
pond/stock/: __init__.py  trades.py
pond/tdx/: block.py  finance_cw.py  fq.py  gbbq.py  gbbq_hexdump_keys.py  kline.py  path.py
pond/tdx/finance/: __init__.py  map.py
pond/tdx/finance/f008_073_balance_sheet1/: __init__.py  f008_040_assets.py  f041_063_liabilities.py  f064_072_equity.py
pond/tdx/finance/f074_097_income_statement1/: __init__.py
pond/tdx/finance/f108_158_cash_flow_statement1/: __init__.py  (+3 more)
pond/tdx/reader/: __init__.py  lc_min_bar_reader.py
pond/utils/: __init__.py  code2code.py  crawler.py  file.py  network.py  stock.py  times.py
sql/: Script.sql
tests/: __init__.py  conftest.py
tests/clickhouse/: clickhouse_manager_test.py
(+10 files in other folders)
