[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"


[tool.poetry]
name = "pond"
version = "0.1.1"
description = ""
authors = ["fangyang_gpu <fangyang.jing@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
akshare = "*"
mootdx = "*"
requests = "*"
duckdb = "*"
loguru = "*"
black = "*"
polars = "*"
pyarrow = "*"
sqlalchemy = "^2.0.25"
clickhouse-sqlalchemy = "^0.3.0"
clickhouse_connect = "*"
binance-connector = "^3.5.1"
binance-futures-connector = "^4.0.0"
pre-commit = "*"
ruff = "*"
xmltodict = "^0.13.0"
deprecated = "*"
ray= "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
