[project]
name = "pond"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.16.77",
    "binance-connector==3.11.0",
    "binance-futures-connector>=4.1.0",
    "clickhouse-connect>=0.8.17",
    "clickhouse-sqlalchemy>=0.3.2",
    "deprecated>=1.2.18",
    "duckdb>=1.2.2",
    "loguru>=0.7.3",
    "mootdx>=0.11.7",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "python-binance>=1.0.28",
    "ray>=2.45.0",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pond"]
